# autoware.universe

./: .clang-format  codeowners.yaml
common/autoware_ad_api_msgs/: CMakeLists.txt  README.md
common/autoware_ad_api_msgs/common/msg/: ResponseStatus.msg
common/autoware_ad_api_msgs/driving/msg/: DrivingState.msg
common/autoware_ad_api_msgs/fail_safe/msg/: FailSafeState.msg  MrmState.msg
common/autoware_ad_api_msgs/localization/msg/: LocalizationInitializationState.msg
common/autoware_ad_api_msgs/localization/srv/: InitializeLocalization.srv
common/autoware_ad_api_msgs/motion/msg/: MotionFactorArray.msg  MotionState.msg
common/autoware_ad_api_msgs/msg/: DrivingState.msg  MotionState.msg
common/autoware_ad_api_msgs/operation/mode/msg/: OperationModeNotice.msg  OperationModeState.msg
common/autoware_ad_api_msgs/operation/mode/srv/: ChangeOperationMode.srv
common/autoware_ad_api_msgs/planning/msg/: PlanningFactor.msg  PlanningFactorArray.msg
common/autoware_ad_api_msgs/pose/msg/: PoseState.msg
common/autoware_ad_api_msgs/pose_reset/msg/: PoseResetState.msg
common/autoware_ad_api_msgs/pose_reset/srv/: PoseResetRequest.srv
common/autoware_ad_api_msgs/route/msg/: Route.msg  RouteState.msg
common/autoware_ad_api_msgs/route/srv/: LaneletRouteSet.srv
common/autoware_ad_api_msgs/routing/msg/: Route.msg  RouteOptional.msg  RouteSegment.msg  RouteState.msg
common/autoware_ad_api_msgs/routing/srv/: SetRoute.srv  SetRoutePoints.srv
common/component_state_machine/: CMakeLists.txt  package.xml
common/component_state_machine/include/component_state_machine/: machine.hpp  state_machine.hpp  types.hpp
common/component_state_machine/include/component_state_machine/impl/: errors.hpp
common/component_state_machine/src/: machine.cpp  state_machine.cpp
common/component_state_machine/test/: gtest.cpp  main.cpp  state.yaml
control/autoware_control_cmd_gate/: CMakeLists.txt  README.md  package.xml
control/autoware_control_cmd_gate/config/: default.param.yaml
control/autoware_control_cmd_gate/launch/: control_cmd_gate.launch.xml
control/autoware_control_cmd_gate/src/: control_cmd_gate.cpp  control_cmd_gate.hpp
control/autoware_control_cmd_gate/src/command/: diagnostics.cpp  diagnostics.hpp  emergency.cpp  emergency.hpp  generator.cpp  generator.hpp  interface.cpp  interface.hpp  publisher.cpp  publisher.hpp  selector.cpp  selector.hpp  subscription.cpp  subscription.hpp
control/vehicle_cmd_gate2/: CMakeLists.txt  README.md  package.xml
control/vehicle_cmd_gate2/config/: vehicle_cmd_gate.param.yaml
control/vehicle_cmd_gate2/launch/: vehicle_cmd_gate.launch.xml
control/vehicle_cmd_gate2/src/: vehicle_cmd_gate.cpp  vehicle_cmd_gate.hpp
control/vehicle_cmd_gate2/src/command/: diagnostic.cpp  diagnostic.hpp  disengage.cpp  disengage.hpp  emergency.cpp  emergency.hpp  interface.cpp  interface.hpp  publisher.cpp  publisher.hpp  selector.cpp  selector.hpp  subscription.cpp  subscription.hpp
interface/autoware_interface_test/: CMakeLists.txt  package.xml
interface/autoware_interface_test/python/: py_sub_v1.py
interface/autoware_interface_test/src/: test_cli_dev.cpp  test_pub_raw.cpp  test_sub_dev.cpp  test_sub_raw.cpp
interface/component_interface_manager_test/: CMakeLists.txt  package.xml
interface/component_interface_manager_test/python/sample_message/: ros.py  v1.py  v2.py
interface/component_interface_manager_test/script/: py_pub_ros.py  py_pub_v1.py  py_pub_v2.py  py_sub_ros.py  py_sub_v1.py  py_sub_v2.py
interface/component_interface_manager_test/test/cpp/: test_cli_dev.cpp  test_pub_dev.cpp  test_srv_dev.cpp
interface/component_interface_manager_test/test/cpp/msg/: cpp_pub_ros.cpp  cpp_pub_v1.cpp  cpp_pub_v2.cpp  cpp_sub_ros.cpp  cpp_sub_v1.cpp  cpp_sub_v2.cpp
interface/component_interface_manager_test/test/cpp/srv/: cpp_cli_ros.cpp  cpp_cli_v1.cpp  cpp_cli_v2.cpp  cpp_srv_ros.cpp  cpp_srv_v1.cpp  (+3 more)
interface/component_interface_manager_test/test/py/: py_pub_dev.py  py_pub_v1.py  py_sub_dev.py
interface/vehicle_control_interface/: CMakeLists.txt  package.xml
interface/vehicle_control_interface/python/sample_color/: dev.py  v1.py
localization/pose_initializer/: CMakeLists.txt  package.xml
localization/pose_initializer/launch/: pose_initializer.launch.xml
localization/pose_initializer/src/: copy_vector_to_array.hpp  fitting_to_map_height.cpp  fitting_to_map_height.hpp  initialpose_gnss_helper.cpp  initialpose_gnss_helper.hpp  initialpose_rviz_helper.cpp  initialpose_rviz_helper.hpp  mock.cpp  pose_initializer_auto.cpp  pose_initializer_auto.hpp  pose_initializer_core.cpp  pose_initializer_core.hpp  pose_initializer_core_old.cpp  pose_initializer_core_old.hpp  pose_initializer_node.cpp  pose_initializer_rviz.cpp  test.cpp
localization/pose_initializer/src/lib/: automatic_api_caller.cpp  automatic_api_caller.hpp  copy_vector_to_array.hpp  gnss_module.cpp  initial_pose_adaptor.hpp  pose_initializer_core.cpp  pose_initializer_core.hpp  stop_check_module.cpp  stop_check_module.hpp
localization/pose_initializer/test/: mock.cpp  mock.hpp  test_copy_vector_to_array.cpp
planning/behavior_velocity_modules/v2x_gate_driver/: CMakeLists.txt  package.xml  plugins.xml
planning/behavior_velocity_modules/v2x_gate_driver/launch/: v2x_gate_driver.launch.xml
planning/behavior_velocity_modules/v2x_gate_driver/src/: loader.cpp  loader.hpp
system/default_ad_api/: CMakeLists.txt  package.xml  route.py
system/default_ad_api/launch/: default_ad_api.launch.py
system/default_ad_api/src/: debug.cpp  diagnostics.cpp  diagnostics.hpp  driving.cpp  driving.hpp  interface.cpp  interface.hpp  interface_version.cpp  interface_version.hpp  localization.cpp  motion.cpp  motion.hpp  operation_mode.cpp  operation_mode.hpp  parameter.cpp  parameter.hpp  route.cpp  route.hpp  test.cpp  test.hpp  types.hpp
system/default_ad_api/state/: driving.yaml
system/system_diagnostic_viewer/: CMakeLists.txt  package.xml  plugin.xml
system/system_diagnostic_viewer/python/: plugin.py
system/system_diagnostic_viewer/script/: system_diagnostic_monitor
(+238 files in other folders)
