<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_control_interface</name>
  <version>0.0.0</version>
  <description>The vehicle_control_interface package</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <build_depend>autoware_interface_library</build_depend>
  <build_depend>autoware_vehicle_msgs</build_depend>
  <build_export_depend>autoware_interface_library</build_export_depend>
  <build_export_depend>autoware_vehicle_msgs</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
